--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,9 @@
 <!-- header component should come here -->
 <app-header></app-header>
 
-<div>
-  <h1>Success!!!</h1>
+<div class="container text-center" style="margin-top: 80px;">
+  <h1>Welcome to Phone Book App!</h1>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
 </div>
 
 <!-- footer comp should come here-->
