--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<div class="text-center">
+  <hr>
+  <app-menu>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Back to top</a>
+    </li>
+  </app-menu>
+  <p>Copyright &copy; 2020 | Hexaware </p>
+</div>
