--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,7 @@
 <app-header></app-header>
 
 <div class="container text-center" style="margin-top: 80px;">
-  <h1>Welcome to Phone Book App!</h1>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+  <router-outlet></router-outlet>
 </div>
 
 <!-- footer comp should come here-->
