--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <!-- header component should come here -->
 <app-header></app-header>
 
-<div class="container text-center" style="margin-top: 80px;">
+<div class="container marginTop">
   <router-outlet></router-outlet>
 </div>
 
