--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div>
+  <h1>Welcome to Phone Book App!</h1>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+</div>
