--- a/src/app/contacts/add-contact/add-contact.component.html
+++ b/src/app/contacts/add-contact/add-contact.component.html
@@ -1,1 +1,62 @@
-<p>add-contact works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Add Contact</h1>
+      <button class="btn btn-dark">Go Back</button>
+    </div>
+
+    <!-- Step 3: Patch up the form tag in html with FormGroup in TS  -->
+    <!-- App will show error. go to app.module.ts and add ReactiveFormsModule in imports section -->
+    <form [formGroup]="contactForm" class="col-md-6 offset-md-3" 
+    (ngSubmit)='addContactHandler()'> 
+      <div class="form-group row">
+        <label for="staticName" class="col-sm-2 col-form-label">Name</label>
+        <div class="col-sm-10">
+         <!-- Step 4: Patch up the form elements in html with form control in TS file and ref TS for step 5-->
+          <input type="text" class="form-control" 
+          [ngClass]="{ 'is-invalid': contactForm.get('name').touched && contactForm.get('name').invalid }"
+          placeholder="Enter Name" formControlName='name'/>  <!-- step6: displaying validation related msg -->
+          <div class="invalid-feedback">
+            <div>Name is required</div>
+          </div>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="staticPhone" class="col-sm-2 col-form-label">Phone</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control"
+          placeholder="Enter Phone" formControlName='phone' 
+          [ngClass]="{ 'is-invalid': contactForm.get('phone').touched 
+          && contactForm.get('phone').invalid }"/>
+          <div class="invalid-feedback">
+            <div>Phone is required</div>
+          </div>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" 
+          placeholder="Enter Email" formControlName='email'
+          [ngClass]="{ 'is-invalid': contactForm.get('email').touched 
+          && contactForm.get('email').invalid }"/>
+          <div *ngIf="contactForm.get('email').touched && contactForm.get('email').invalid" 
+          class="invalid-feedback">
+            <div *ngIf="contactForm.get('email').errors?.required">Email is required</div>
+            <div *ngIf="contactForm.get('email').errors?.email">Email seems to be not valid</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="alert alert-success">
+        Saved Successfully
+      </div>
+
+      <div class="form-group row">
+        <div class="col-sm-10 offset-sm-2">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
