--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,1 +1,23 @@
-<p>contacts works!</p>
+<div class="container">
+  <div class="row">
+    <section class="col-sm-12 main-section ">
+      <div class="jumbotron">
+        <h1 class="display-4">Contact Manager App!</h1>
+        <a class="btn btn-primary btn-lg" routerLink="/contacts/new" role="button">Create New Contact</a>
+      </div>
+    </section>
+  </div>
+
+  <div class="row">
+
+    <div class="card col-sm-3">
+      <div class="card-body">
+        <h5 class="card-title">John</h5>
+        <p class="card-text">32423532532</p>
+        <a routerLink="/contacts/1" class="link">View Details</a>
+      </div>
+    </div>
+
+  </div>
+
+</div>
