--- a/src/app/contacts/add-contact/add-contact.component.html
+++ b/src/app/contacts/add-contact/add-contact.component.html
@@ -8,7 +8,7 @@
     <!-- Step 3: Patch up the form tag in html with FormGroup in TS  -->
     <!-- App will show error. go to app.module.ts and add ReactiveFormsModule in imports section -->
     <form [formGroup]="contactForm" class="col-md-6 offset-md-3" 
-    (ngSubmit)='addContactHandler()'> 
+    (ngSubmit)='addContactHandler()'>  <!-- Step 7: submission handler-->
       <div class="form-group row">
         <label for="staticName" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
@@ -48,7 +48,7 @@
         </div>
       </div>
 
-      <div class="alert alert-success">
+      <div class="alert alert-success" *ngIf="isSaved">
         Saved Successfully
       </div>
 
