--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -10,13 +10,14 @@
 
   <div class="row">
 
-    <div class="card col-sm-3">
+    <div class="card col-sm-3" *ngFor="let contact of contactList">
       <div class="card-body">
-        <h5 class="card-title">John</h5>
-        <p class="card-text">32423532532</p>
-        <a routerLink="/contacts/1" class="link">View Details</a>
+        <h5 class="card-title">{{contact.name}}</h5>
+        <p class="card-text">{{contact.phone}}</p>
+        <a routerLink="/contacts/{{contact.id}}" class="link">View Details</a>
       </div>
     </div>
+    
 
   </div>
 
