--- a/src/app/contacts/add-contact/add-contact.component.html
+++ b/src/app/contacts/add-contact/add-contact.component.html
@@ -2,7 +2,8 @@
   <div class="row">
     <div class="col-md-12">
       <h1>Add Contact</h1>
-      <button class="btn btn-dark">Go Back</button>
+      <button class="btn btn-dark" >Go Back</button>
+      <!-- todo: google query: navigate to another route in angular -->
     </div>
 
     <!-- Step 3: Patch up the form tag in html with FormGroup in TS  -->
