--- a/src/app/contacts/contact-details/contact-details.component.html
+++ b/src/app/contacts/contact-details/contact-details.component.html
@@ -8,7 +8,7 @@
               card's content.</p>
             <p>Phone: {{ contactData.phone }}</p>
             <p>Email: {{ contactData.email }}</p>
-            <button type="button" class="btn btn-primary" 
+            <button type="button" class="btn btn-primary" (click)='onEditModalOpen()'
             data-toggle='modal' data-target='#editContactModal' 
             >Edit</button>
             <button type="button" class="btn btn-danger">Delete</button>
@@ -25,14 +25,14 @@
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
-                  <div class="modal-body">
-                    <form>
+                  <div class="modal-body" *ngIf='duplicateContactData'>
+                    <form ngNativeValidate (ngSubmit)='updateContactHandler()'>
                       <div class="form-group row">
                         <label for="staticEmail" class="col-sm-2 col-form-label">Name</label>
                         <div class="col-sm-10">
                           <input type="text" class="form-control" 
                         placeholder="Enter name" 
-                        name="username"
+                        name="username" [(ngModel)]="duplicateContactData.name"
                           required>
                         </div>
                       </div>
@@ -40,14 +40,16 @@
                         <label for="staticEmail" class="col-sm-2 col-form-label">Phone</label>
                         <div class="col-sm-10">
                           <input type="text" class="form-control" 
-                          placeholder="Enter Phone" name='phone' required>
+                          placeholder="Enter Phone" name='phone' 
+                          [(ngModel)]="duplicateContactData.phone" required>
                         </div>
                       </div>
                       <div class="form-group row">
                         <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
                         <div class="col-sm-10">
                           <input type="email" class="form-control" 
-                          name='email' placeholder="Enter Email" required
+                          name='email' placeholder="Enter Email" 
+                          [(ngModel)]="duplicateContactData.email" required
                           >
                         </div>
                       </div>
