--- a/src/app/contacts/add-contact/add-contact.component.html
+++ b/src/app/contacts/add-contact/add-contact.component.html
@@ -11,26 +11,26 @@
     <form [formGroup]="contactForm" class="col-md-6 offset-md-3" 
     (ngSubmit)='addContactHandler()'>  <!-- Step 7: submission handler-->
       <div class="form-group row">
-        <label for="staticName" class="col-sm-2 col-form-label">Name</label>
+        <label for="staticName" class="col-sm-2 col-form-label">First Name</label>
         <div class="col-sm-10">
          <!-- Step 4: Patch up the form elements in html with form control in TS file and ref TS for step 5-->
           <input type="text" class="form-control" 
-          [ngClass]="{ 'is-invalid': contactForm.get('name').touched && contactForm.get('name').invalid }"
-          placeholder="Enter Name" formControlName='name'/>  <!-- step6: displaying validation related msg -->
+          [ngClass]="{ 'is-invalid': contactForm.get('first_name').touched && contactForm.get('first_name').invalid }"
+          placeholder="Enter Name" formControlName='first_name'/>  <!-- step6: displaying validation related msg -->
           <div class="invalid-feedback">
-            <div>Name is required</div>
+            <div>First Name is required</div>
           </div>
         </div>
       </div>
       <div class="form-group row">
-        <label for="staticPhone" class="col-sm-2 col-form-label">Phone</label>
+        <label for="staticPhone" class="col-sm-2 col-form-label">Last Name</label>
         <div class="col-sm-10">
           <input type="text" class="form-control"
-          placeholder="Enter Phone" formControlName='phone' 
-          [ngClass]="{ 'is-invalid': contactForm.get('phone').touched 
-          && contactForm.get('phone').invalid }"/>
+          placeholder="Enter Phone" formControlName='last_name' 
+          [ngClass]="{ 'is-invalid': contactForm.get('last_name').touched 
+          && contactForm.get('last_name').invalid }"/>
           <div class="invalid-feedback">
-            <div>Phone is required</div>
+            <div>Last Name is required</div>
           </div>
         </div>
       </div>
