--- a/src/app/contacts/contact-details/contact-details.component.html
+++ b/src/app/contacts/contact-details/contact-details.component.html
@@ -3,10 +3,10 @@
       <div class="row">
         <div class="card col-md-12">
           <div class="card-body" *ngIf='contactData'>
-            <h5 class="card-title">{{ contactData.name }}</h5>
+            <h5 class="card-title">{{ contactData.first_name }}</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
               card's content.</p>
-            <p>Phone: {{ contactData.phone }}</p>
+            <p>Last Name: {{ contactData.last_name }}</p>
             <p>Email: {{ contactData.email }}</p>
             <button type="button" class="btn btn-primary" (click)='onEditModalOpen()'
             data-toggle='modal' data-target='#editContactModal' 
@@ -28,20 +28,20 @@
                   <div class="modal-body" *ngIf='duplicateContactData'>
                     <form ngNativeValidate (ngSubmit)='updateContactHandler()'>
                       <div class="form-group row">
-                        <label for="staticEmail" class="col-sm-2 col-form-label">Name</label>
+                        <label for="staticEmail" class="col-sm-2 col-form-label">First Name</label>
                         <div class="col-sm-10">
                           <input type="text" class="form-control" 
                         placeholder="Enter name" 
-                        name="username" [(ngModel)]="duplicateContactData.name"
+                        name="fname" [(ngModel)]="duplicateContactData.first_name"
                           required>
                         </div>
                       </div>
                       <div class="form-group row">
-                        <label for="staticEmail" class="col-sm-2 col-form-label">Phone</label>
+                        <label for="staticEmail" class="col-sm-2 col-form-label">Last Name</label>
                         <div class="col-sm-10">
                           <input type="text" class="form-control" 
-                          placeholder="Enter Phone" name='phone' 
-                          [(ngModel)]="duplicateContactData.phone" required>
+                          placeholder="Enter Phone" name='lname' 
+                          [(ngModel)]="duplicateContactData.last_name" required>
                         </div>
                       </div>
                       <div class="form-group row">
