--- a/src/app/contacts/contact-details/contact-details.component.html
+++ b/src/app/contacts/contact-details/contact-details.component.html
@@ -54,7 +54,7 @@
                         </div>
                       </div>
     
-                      <div class="alert alert-success">
+                      <div class="alert alert-success" *ngIf="isUpdated">
                         Updated successfully!
                       </div>  
   
